--- a/app/src/main/res/layout/activity_target.xml
+++ b/app/src/main/res/layout/activity_target.xml
@@ -8,17 +8,12 @@
         <Button
                 android:id="@+id/activity_target_start_button"
                 android:text="Start!"
+                android:textSize="32dp"
                 android:padding="@dimen/default_padding"
+                android:layout_marginBottom="44dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:textColor="#ffdddddd"
-                android:text="@string/app_name"/>
 
 </RelativeLayout>
